--- a/IAP.ioc
+++ b/IAP.ioc
@@ -1,21 +1,27 @@
 #MicroXplorer Configuration settings - do not modify
+CAN.CalculateTimeBit=1500
+CAN.CalculateTimeQuantum=500.0
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit
 File.Version=5
 KeepUserPlacement=true
 Mcu.Family=STM32F1
-Mcu.IP0=CRC
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP0=CAN
+Mcu.IP1=CRC
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PB3
-Mcu.Pin13=VP_CRC_VS_CRC
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB3
+Mcu.Pin15=VP_CRC_VS_CRC
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
@@ -24,15 +30,19 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA9
 Mcu.Pin9=PA10
-Mcu.PinsNb=14
+Mcu.PinsNb=16
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
-MxCube.Version=4.10.0
-MxDb.Version=DB.4.0.100
+MxCube.Version=4.10.1
+MxDb.Version=DB.4.0.101
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SysTick_IRQn=true\:0\:0\:false
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.Mode=Master
+PA11.Signal=CAN_RX
+PA12.Mode=Master
+PA12.Signal=CAN_TX
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -84,7 +94,7 @@ PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PCC.Checker=false
 PCC.Line=STM32F103
 PCC.MCU=STM32F103R(8-B)Tx
-PCC.MXVersion=4.10.0
+PCC.MXVersion=4.10.1
 PCC.PartNumber=STM32F103RBTx
 PCC.Seq0=0
 PCC.Series=STM32F1
